// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`json body > array input > requires at least one source 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "error": "Bad Request",
  "message": "0: At least one ID must be provided",
  "statusCode": 400,
}
`;

exports[`json body > object input > errors correctly on an empty object 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "error": "Bad Request",
  "message": "At least one ID must be provided",
  "statusCode": 400,
}
`;

exports[`json body > object input > gET fails with json body 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "error": "Bad Request",
  "message": "Invalid input",
  "statusCode": 400,
}
`;
